--- a/src/main/resources/templates/configure-plugin.vm
+++ b/src/main/resources/templates/configure-plugin.vm
@@ -27,6 +27,15 @@
       .aui-icon.icon-help {
         vertical-align: top;
       }
+
+      form.aui legend, form.aui .field-group>label, form.aui .field-group>aui-label {
+        padding: 0;
+        float: none;
+      }
+
+      form.aui div.description {
+        margin-left: -145px;
+      }
     </style>
   </head>
   <body>
@@ -61,14 +70,15 @@
             <p>$i18n.getText("plugin.configuration.success")</p>
           </div>
           #end
-          <div class="aui-message info">
-            <span class="aui-icon icon-info"></span>
-            <p>$i18n.getText("plugin.configuration.instruction")</p>
-          </div>
           <div class="field-group">
             <label for="url">$i18n.getText("plugin.configuration.url.label")</label>
             <input type="url" required pattern="https?://.+"  value="$url" id="url" name="url" class="text">
             <div class="aui-description description">$i18n.getText("plugin.configuration.url.description")</div>
+          </div>
+          <div class="field-group">
+            <label for="jiraurl">$i18n.getText("plugin.configuration.baseurl.label")</label>
+            <input type="jiraurl" required pattern="https?://.+"  value="$jiraurl" id="jiraurl" name="jiraurl" class="text">
+            <div class="aui-description description">$i18n.getText("plugin.configuration.baseurl.description")</div>
           </div>
         </div>
         <div class="buttons-container form-footer">
