--- a/src/main/resources/templates/configure-plugin.vm
+++ b/src/main/resources/templates/configure-plugin.vm
@@ -95,10 +95,8 @@
             The configured API user should have permission to perform the following actions:
             </p>
             <ul>
-              <li>View all available issue types</li>
-              <li>View all users' profiles</li>
               <li>Browse all projects</li>
-              <li>Modify all projects</li>
+              <li>Administer all projects</li>
             </ul>
             <p><strong>NOTE:</strong> Rather than use an user with full administrative prilidges, you can instead configure a user
             with the <strong>Browse Projects</strong> and <strong>Administer Projects</strong> permissions. Navigate to
